# trades

./: .gitignore  kube-back.dev.yaml  kube-front.dev.yaml  kube-infra.dev.yaml  kube-pvc.dev.yaml  kube-robot.dev.yaml
back/: Cargo.toml  Dockerfile  Dockerfile.dev  go.mod  go.sum
back/cmd/: main.go
back/internal/app/trades/: create_bns_pair.go  get_bns_klines.go  get_bns_pair.go  ping.go  trades.go
back/internal/bootstrap/: app.go  storage.go
back/internal/models/: models.go
back/internal/storage/: storage.go
back/migrations/2022-07-12-203800_create_bns_klines/: up.sql
back/src/: lib.rs  main.rs  schema.rs
back/src/bns/: downloader.rs
back/src/bns/downloader/: mod.rs
back/src/core/: handlers.rs  mod.rs  models.rs
front/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
front/src/app/: app.component.ts
robot/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev
robot/migrations/2022-07-12-203800_create_bns_klines/: down.sql
robot/migrations/2022-07-28-111907_create_indicators_data/: down.sql  up.sql
robot/src/: lib.rs  main.rs  schema.rs
robot/src/bns/: downloader.rs
robot/src/core/: handlers.rs  models.rs  storage.rs
