[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
