[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "numeric"] }
dotenv = "0.15.0"
serde = "1.0.139"
serde_json = "1.0.82"
binance = { git = "https://github.com/asiman161/binance-rs.git" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.19.2", features = ["full"] }
bigdecimal = "0.1.2"